--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -23,10 +23,12 @@ authors:
     initials: MP
     affiliations:
       - Biomedical Informatics research group, Department of Informatics, University of Oslo, Oslo, Norway
-  - name: Chakri
-    initials: C
+      - UiORealArt Convergence Environment, University of Oslo, Oslo, Norway
+  - name: Chakravarthi Kanduri
+    initials: CK
     affiliations:
       - Biomedical Informatics research group, Department of Informatics, University of Oslo, Oslo, Norway
+      - UiORealArt Convergence Environment, University of Oslo, Oslo, Norway
   - name: Geir Kjetil Sandve
     initials: GKS
     affiliations:
